objects/vlocity_cmt__RelationshipGraphNodeType__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__FieldList__c</fullName>
        <description>List of fields to return for this node type in this graph</description>
        <label>Field List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>Data pack support.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GraphId__c</fullName>
        <label>Relationship Graph</label>
        <referenceTo>vlocity_cmt__RelationshipGraph__c</referenceTo>
        <relationshipLabel>Relationship Graph Node Types</relationshipLabel>
        <relationshipName>RelationshipGraphNodeTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectApiName__c</fullName>
        <description>Object API Name of Node in this Graph</description>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecordTypeName__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relationship Graph Node Type</label>
    <nameField>
        <label>Relationship Graph Node Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Graph Node Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>